--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   text-align: center;
 }
 
-#tribute-info {
+#tribute-detail {
   width: 500px;
   text-align: start;
   font-size: 20px;
@@ -15,6 +15,6 @@ body {
   margin-right: auto;
 }
 
-#tribute-info h3 {
+#tribute-detail h3 {
   text-align: center;
 }
